--- a/style.css
+++ b/style.css
@@ -1,64 +1,82 @@
 *{
     padding: 0;
     margin: 0;
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
 }
-h1{
-    background-color: blueviolet;
-    color: white;
-    height:5rem;
-    line-height: 5rem;
-    
-}
-.choice
-{
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    background-color: rgb(18, 234, 79);
-    
-}
-.choice:hover{
-    transform: scale(1.5);
-    cursor: pointer;
-}
-img{
-    width: 150px;
-    height: 150px;
-   object-fit: fill; 
-   padding-top: 20px;
-}
-.choices{
+body{
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 5rem;
-    margin-top: 5rem;
+    min-height: 100vh;
+    background-color: rgb(241, 139, 4);
 }
-.score-board
+.container
 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size:2rem;
-    margin-top: 3rem;
-    gap:5rem;
-}
-#user-id,#comp-id
-{
-    font-size: 4rem;
-}
-
-.msg-container{
-    margin-top: 3rem;
-}
-#msg
-{
-    background-color: rgb(13, 239, 224);
-    font-size: 2rem;
-    display: inline;
-    color: white;
+    background-color: azure;
     padding: 1rem;
     border-radius: 1rem;
+    min-height: 50vh;
+    width: 50vh;
 }
+form{
+    margin: 2rem 0 1rem 0;
+}
+form select , button, input{
+    width: 100%;
+    border: none;
+    outline: none;
+    border-radius: 0.75rem;
+}
+form .para{
+    text-align: center;
+    font-size: x-large;
+}
+form input
+{
+    border: 1px solid lightgray; 
+    font-size: 1rem;
+    height: 1rem;
+    width: 20rem;
+    padding: 0.5rem;
+    text-align: center;
+    margin-right: 2rem;
+}
+.dropdown
+{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 2rem;
+}
+.select-container img{
+    max-width:  2rem;
+}
+.select-container
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 6rem;
+    border-radius: .5rem;
+    border: 1px solid lightgrey;
+}
+.select-container select
+{
+    font-size: 1rem;
+    width: auto;
+
+}
+.msg
+{
+margin: 2rem 0 2rem 0;
+}
+form button
+{   
+    height: 3rem;
+    background-color: rgb(16, 16, 219);
+    color: aliceblue;
+    font-size: 1.15rem;
+    cursor: pointer;
+
+    
+}
+
